# llm-wiki-manager

./: .gitignore
.claude/: launch.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  sidecar.py
backend/app/api/: settings.py  uploads.py  wiki.py  workspace.py
backend/app/core/: __init__.py  config.py  paths.py  secrets.py
backend/app/schemas/: settings.py  upload.py  wiki.py
backend/app/services/: llm_service.py  parser_service.py  storage_service.py  wiki_service.py
backend/app/web/: app.js  index.html  style.css
backend/tests/: test_api_smoke.py  test_config_and_paths.py  test_llm_service.py  test_parser_service.py  test_storage_and_wiki_service.py
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: prepare-sidecar.ps1
desktop/src/: App.vue  main.ts  style.css  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/services/: api.test.ts  api.ts  backend.test.ts  backend.ts
docs/: AI个人知识库桌面端App功能单_修正版.md  AI个人知识库桌面端App技术栈方案_Python后端版.md
docs/superpowers/plans/: 2026-05-28-llm-wiki-mvp.md  2026-05-28-tauri-vue-desktop.md
openspec/: AGENTS.md  project.md
openspec/changes/archive/2026-05-28-desktop-workspace-selector/: design.md  proposal.md  tasks.md
openspec/changes/full-version-roadmap/: proposal.md  tasks.md
openspec/changes/full-version-roadmap/specs/agent-operations/: spec.md
(+10 files in other folders)
