[project]
name = "llm-wiki-manager-backend"
version = "0.1.0"
description = "Local FastAPI MVP for generating Markdown LLM Wiki pages from documents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
